# chatgpt

./: Cargo.toml  api.toml
src/: http.rs  main.rs  model.rs  server.rs
src/model/: api.rs  create_chat_complete.rs  create_complete.rs  list_models.rs  retrieve_model.rs
src/server/: api.rs  create_chat_complete.rs  create_complete.rs  list_models.rs  retrieve_model.rs
src/server/api/: api_key.rs  key.rs
