[package]
name = "chatgpt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_derive = "1.0.162"
tokio = { version = "1.28.0", features = ["full"] }
toml = "0.7.3"
colorful = "0.2.2"

